--- a/variables.env
+++ b/variables.env
@@ -6,10 +6,11 @@
 HUGGINGFACE_HUB_CACHE=/data/
 
 # Where the embedding model is run (cpu, cuda:[n-1])
-EMBEDDING_DEVICE=cpu
+EMBEDDING_DEVICE=cuda
 
 # Set the Docker Host mount for NIM on local RTX
 DOCKER_HOST=unix:///var/host-run/docker.sock
 
 # Location of NIM on local RTX models
-LOCAL_NIM_HOME=/mnt/c/Users/NVIDIA (Edit Me!)
+LOCAL_NIM_HOME=/mnt/c/Users/vpmavuri
+LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu
